// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeValidSchema fails for valid schema when using .not 1`] = `
"expect(received).not.toBeValidSchema()

Expected input not to be a valid JSON schema"
`;

exports[`toBeValidSchema fails schemas of invalid types 1`] = `
"expect(schema).toBeValidSchema()

schema
  should be object,boolean
"
`;

exports[`toBeValidSchema fails schemas with invalid properties 1`] = `
"expect(schema).toBeValidSchema()

schema
  /properties should be object
"
`;
